# tfg-arquitecturas

./: .gitignore  Dockerfile  pyproject.toml
src/: train.py
src/configs/: classification.yaml
src/configs/configs/: classification.yaml
src/dataset/: builder.py
src/models/: factory.py  metaformer.py
src/models/mixer/: __init__.py  dat_attention.py  gated_cnn.py  mamba.py  mixer_config.py  registry.py
src/models/module/: __init__.py  downsample.py  drop_path.py  head.py  layer_scale.py  mlp.py  stem.py
src/trainers/: base.py  classification_trainer.py
src/utils/: logger.py  optimizer.py
